src/css/header.css
/*=====header common=====*/
#header{
  position: fixed;
  display: flex;
  align-items: center;
  width: 100%;
  height: 80px;
  justify-content: center;
  z-index: 100;
}
#header.fixed-bg {
  background: white;
  border-bottom: 1px solid #e6e6e6;
}

#header a{
  color: white;
  font-size: 20px;
  font-weight: 300;
}
#header.fixed-bg a{
  color: #3b3b3b;
}

.logo,
.nav-links,
.dropdown-menu{
  display: flex;
  justify-content: center;
  align-items: center;
}


/*=========logo=========*/
.logo img{
  width: 260px;
}
.logo li:last-child {
  display: none;
}
.fixed-bg .logo li:first-child {
  display: none;
}
.fixed-bg .logo li:last-child {
  display: inline-block;
}


/*========nav-links========*/
.nav-links{
  margin-left: 120px;
}
.nav-links > li{
  margin: 0 10px;
  position: relative;
}

/* hover link color */
#header .nav-links > li:hover > a{
  color: #bcffb7;
}
#header.fixed-bg .nav-links > li:hover > a{
  color: #56b96b;
}
#header .nav-links > li.mentor-btn:hover > a {
  color: white;
}


/*dropdown menu*/
.dropdown{
  position: relative;
}
.dropdown-menu{
  display: none;
  position: absolute;
  flex-direction: column;
  align-items: flex-start;
  background: white;
  border-radius: 3px;
  text-align: center;
  box-shadow: 0 2px 1px 0 #c3c0c0;
}
.dropdown-menu h5 {
  text-transform: uppercase;
  color: #585858;
  margin-bottom: 10px;
}
.dropdown-menu div p{
  margin-top: 0;
  margin-bottom: 0;
}
.dropdown-menu > li{
  width: 100%;
}
/*overriding #header a*/
#header .dropdown-menu a{
  font-size: 16px;
  color: #6a6969;
}
.dropdown-menu a{
  width: 100%;
  display: inline-block;
  padding: 10px;
  position: relative;
}
.dropdown-menu a:hover{
  background: #56b96b;
}
#header .dropdown-menu a:hover {
  color: white;
}
.dropdown:hover > .dropdown-menu{
  display: flex;
}

/* nested dropdown */
/* .dropdown-menu > li {
  border-bottom: 1px solid #dce4ec;
}
.dropdown-menu > li:last-child {
  border-bottom: none;
}
.dropdown-menu > li:first-child > a:hover{
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}
.dropdown-menu > li:last-child > a:hover{
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

.dropdown-child {
  display: none;
}
.dropdown-child a {
  padding-left: 15px;
  padding-right: 15px;
}
.engineer-navlinks:hover > ul.dropdown-child,
.medical-navlinks:hover > ul.dropdown-child {
  display: block;
  position: absolute;
  left: 113px;
  top: 0px;
} */


/*creating arrow \/*/
.dropdown > a{
  position: relative;
  padding-right: 15px;
}
.dropdown > a:before,
.dropdown > a:after{
  content: '';
  position: absolute;
  top: 12px;
  height: 2px;
  width: 8px;
  background: white;
}
.dropdown > a:before{
  transform: rotate(45deg);
  right: 2px;
}
.dropdown > a:after{
  transform: rotate(-45deg);
  right: -3px;
}
/* on hover state */
.dropdown:hover > a:before,
.dropdown:hover > a:after {
  background: #bcffb7;
}
/* when scrolled */
.fixed-bg .dropdown > a:before,
.fixed-bg .dropdown > a:after {
  background: #3b3b3b;
}
.fixed-bg .dropdown:hover > a:before,
.fixed-bg .dropdown:hover > a:after {
  background: #56b96b;
}


/*========mentor========*/
.mentor-btn a{
  display: inline-block;
  border: 1px solid white;
  padding: 7px 12px;
  border-radius: 5px;
  transition: all 0.2s ease-in-out;
}
.fixed-bg .mentor-btn a {
  border: 1px solid #3b3b3b;
}
.mentor-btn a:hover{
  background: #62d06d;
  border: 1px solid #62d06d;
}
#header.fixed-bg .mentor-btn a:hover {
  color: white;
}


/*========hamburger and phone-whatsapp-mob========*/
.hamburger,.close-btn{
  display: none;
}

/* hide nav-links header image */
.nav-links > li img {
  display: none;
}

.drop-arrow {
  display: none;
}

@media(max-width: 1080px){
  #header{
    width: 100%;
    justify-content: space-between;
    padding: 0 30px;
  }
  /*nav-links*/
  .nav-links{
    display: flex;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: flex-start;
    margin: 0;
    z-index: 1000;
    color: black;
    text-align: center;
    padding: 40px 0 5px;
    background: #272727;
    transform: translateX(100%);
    transition: transform 0.2s cubic-bezier(0, 0, 0.32, 1.12);
  }
  .nav-links.nav-open{
    transform: translate(0px);
  }

  /* dropdown-menu */
  .nav-links .dropdown-menu {
    display: none;
  }
  .dropdown:hover > .dropdown-menu {
    display: flex;
    position: absolute;
    top: 0;
    left: -114px;
  }
  
  /* bg overlay */
  .nav-links.nav-open ~ .hamburger:after {
    content: '';
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(75, 75, 75, 0.8);
    z-index: 100;
  }

  /* image in navlinks in small devices */
  .nav-links > li img {
    display: inline-block;
    height: 50px;
  }
  .nav-links > li{
    margin: 10px 0px;
    width: 120px;
  }
  .nav-links a{
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
  /* title under the image in menu */
  .nav-links a span{
    color: white;
    font-size: 16px;
    margin-top: 10px;
    text-transform: uppercase;
  }
  
  /* remove arrow \/ */
  .dropdown > a:before, 
  .dropdown > a:after {
    display: none;
  }
  /* remove padding from dropdown as arrow removed*/
  .dropdown > a{
    padding: 0;
  }

  /*hamburger*/
  .hamburger{
    display: inline-block;
    position: relative;
    top: -3px;
    cursor: pointer;
  }
  .hamburger > li{
    display: flex;
    color: white;
  }
  .fixed-bg .hamburger > li{
    color: black;
  }
  .hamburger p{
    margin: 0;
    font-size: 18px;
  }
  .hamburger div{
    position: relative;
    top: 2px;
    margin-left: 10px;
    display: flex;
    flex-direction: column;
  }
  .hamburger span{
    width: 25px;
    height: 2px;
    background: white;
    display: inline-block;
    margin: 2px 0;
  }
  .fixed-bg .hamburger span {
    background: black;
  }
  /*close btn*/
  .close-btn{
    cursor: pointer;
    position: absolute;
    top: 12px;
    font-size: 17px;
    font-weight: 200;
    right: 12px;
    z-index: 100;
    color: white;
    width: 25px;
    height: 25px;
    text-align: center;
    border-radius: 50%;
    line-height: 25px;
    background: rgba(255,255,255,0.3);
  }
  .close-btn.close-hamburger{
    display: block;
  }

  /* mentor button */
  .nav-links .mentor-btn a{
    border: none;
  }
  /* remove hover green mentor btn */
  #header .mentor-btn a:hover {
    background: transparent;
  }
}


@media(max-width: 900px) {
  #header{
    height: 75px;
  }
}


@media(max-width: 600px) {
  #header{
    padding-left: 15px;
    padding-right: 15px;
  }

  /*logo*/
  .logo img{
    width: 200px;
  }

  /*hamburger*/
  .hamburger p{
    font-size: 17px;
    font-weight: 200;
  }
  .hamburger span{
    width: 20px;
    height: 1px;
  }
  .hamburger div{
    top: 3px;
    margin-left: 5px;
  }

  /* styling dropdown */
  .nav-links {
    top: auto;
    left: 0;
    flex-direction: row;
    transform: translateY(115%);
  }
  .dropdown:hover > .dropdown-menu {
    display: flex;
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    right: 0;
    border-radius: 0;
    box-shadow: none;
    z-index: 10000;
    background: white;
  }
  .dropdown-menu > div {
    width: 100%;
  }
  .dropdown.remove-dropdown:hover > .dropdown-menu{
    display: none;
  }
  /* arrow in dpropdown-menu */
  div.drop-arrow {
    display: inline-block;
    transform: rotate(180deg);
    width: 45px;
    position: absolute;
    top: 0;
    left: 10px;
  }
  div.drop-arrow img {
    width: 30px;
  }
}


@media(max-width: 380px){
  /*logo*/
  .logo img{
    width: 180px;
  }

  /*hamburger*/
  .hamburger p{
    font-size: 16px;
  }
  .hamburger div{
    top: 3px;
  }
}

